# PicolePixelTgBot

./: Cargo.toml  Dockerfile  README.md  database.sqlite
src/: db.rs  main.rs  rank_day.rs  user.rs
