[package]
name = "picole_pixel_bot"
version = "0.1.0"
authors = ["Rémi Heredero <remi@heredero.ch>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
url = "2.5.0"
lazy_static = "1.4.0"
async-std = { version = "1.12", features = [] }
async_once = "0.2"
chrono = "0.4"
chrono-tz = "0.8"
chronoutil = "0.2"
cron-parser = "0.8"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"

[dependencies.teloxide]
version = "0.12"
features = ["default", "macros", "bincode-serializer", "sqlite-storage"]

[dependencies.tokio]
version = "1.8"
features = ["rt-multi-thread", "macros", "rt"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "sqlite"]

